# nft-car-ownership

./: README.md
car/: index.css  index.html
car/api/: Cargo.toml  Makefile  README.md
car/api/src/: car_commands.rs  main.rs  nft.rs  philips_hue.rs  pool.rs  websocket.rs
car/backend/: Cargo.toml  README.md
car/backend/src/: car_commands.rs  main.rs  websocket.rs
car/door-lock-system/: Makefile  Trunk.toml  index.html
car/door-lock-system/src/: car.rs  event_bus.rs  main.rs
car/frontend/: Cargo.toml  Trunk.toml
car/frontend/src/: listener.rs  main.rs
car/src/: car.rs
nft/: .gitignore  Makefile  README.md  export-abi.js  package-lock.json  package.json  truffle-config.js
nft/contracts/: CarNFT.sol  Rental.sol
nft/contracts/0xcert-erc721/: README.md  nf-token-enumerable.sol  nf-token.sol
nft/migrations/: 2_car_nft.js
nft/test/: CarNFT.js  Rental.js
remote-control/: .eslintrc.js  README.md  package.json  tsconfig.json
remote-control/public/: index.html
remote-control/src/: App.vue  main.ts
remote-control/src/components/: AccountConnector.vue  HelloWorld.vue  Mint.vue  NFT.vue  NFTs.vue
remote-control/src/contract/: car-nft.ts
remote-control/src/ethereum/: register.ts
remote-control/src/store/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts
remote-control/tests/unit/: example.spec.ts
