[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-cors = "0.6.0-beta.4"
actix-web = { version = "4.0.0-beta.12" }
actix-web-actors = "4.0.0-beta.7"
hex = "0.4"
hex-literal = "0.3"
hyper = "0.14"
serde = "1.0"
serde_json = "1.0"
web3 = "0.17"
